Fix scrolling rails on Mac OSX.

Scrolling wasn't snapping to the rails on Mac. Force the
opposite co-ordinate to 0 if rail mode is enabled.

BUG=597262

Review URL: https://codereview.chromium.org/1833013002

Cr-Commit-Position: refs/heads/master@{#383620}

Former-commit-id: 79ea645e3fa455cc7829539547dc59ce587f92db